# tui

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
tests/: test_app.py  test_client.py  test_domain.py  test_menu.py  test_validators.py
tui/: app.py  client.py  domain.py  menu.py  validators.py
